--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,38 +1,49 @@
-.App {
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body{
+  margin: 0 auto;
+  background-color:#3CEAF0;
+}
+
+.Clock{
+  position: relative;
+  margin: 5vh auto;
+  width: 50vh;
+  height: 50vh;
+  border: solid 2px #A3943C;
+  border-radius: 50%;
+  background-color: #F0DA62;
+}
+
+.timer{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.timer p{
+ font-size: 5vh;
+ line-height: 150%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.timeMenagment{
+  text-align: center;
+}
+button{
+  width: 13vh;
+  font-size: 5vh;
+  margin: 10px 20px;
+  background-color: #F054BD;
+}
+button:hover{
+  background-color: #189FA3;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.title{
+  font-size: 4vh;
 }
